# libfacedetection

example/: CMakeLists.txt
